--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,15 +1,18 @@
-
 .normal {
-  font-family: Georgia, sans-serif;
-  text-align: center;
+    font-family: Georgia, sans-serif;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
 .title {
-  font-size: 2.5rem;
-  font-weight: normal;
-  letter-spacing: -1px;
-  background: darkslateblue;
-  padding: .6em 0;
-  color: white;
-  margin: 0;
+    font-size: 2.5rem;
+    font-weight: normal;
+    letter-spacing: -1px;
+    background: darkslateblue;
+    padding: .6em 0;
+    color: white;
+    margin: 0;
 }
